force-app/main/default/objects/AH_CRS_Billing_Notification__c/AH_CRS_Billing_Notification__c.object-meta.xml
<CustomObject>
    <description>This object contains event notifications and messages from the CRS Billing environments in Hosted.</description>
    <label>AH CRS Billing Notification</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH CRS Billing Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>