force-app/main/default/objects/AH_CRS_Billing_Notification__c/fields/Job_Process_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Process_ID__c</fullName>
    <description>Optional system job or process ID for the notification</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Optional system job or process ID for the notification</inlineHelpText>
    <label>Job/Process ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>