force-app/main/default/objects/AH_CRS_Billing_Notification__c/fields/Job_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Process_Name__c</fullName>
    <description>The name of the job or system process that generated the notification</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the job or system process that generated the notification</inlineHelpText>
    <label>Job/Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>