force-app/main/default/objects/AH_CRS_Billing_Notification__c/fields/Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date_Time__c</fullName>
    <description>The local date and time on the server when the notification was generated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The local date and time on the server when the notification was generated</inlineHelpText>
    <label>Notification Date/Time</label>
    <type>DateTime</type>
</CustomField>