force-app/main/default/objects/AH_CRS_Billing_Notification__c/fields/Notification_Source__c.field-meta.xml
<CustomField>
    <fullName>Notification_Source__c</fullName>
    <description>Which component, event or process generated the notification on the server</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Which component, event or process generated the notification on the server</inlineHelpText>
    <label>Notification Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>