force-app/main/default/objects/AH_CRS_Billing_Notification__c/listViews/Finance_View.listView-meta.xml
<ListView>
    <fullName>Finance_View</fullName>
    <columns>NAME</columns>
    <columns>Host_Name_IP_Address__c</columns>
    <columns>Job_Process_Name__c</columns>
    <columns>Notification_Summary__c</columns>
    <columns>Notification_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Process_Name__c</field>
        <operation>equals</operation>
        <value>CRS Billing Report</value>
    </filters>
    <label>Finance View</label>
    <language>en_US</language>
</ListView>